@@ -615,8 +615,13 @@
 84) Disable hotplug before update firmware.<br>
 85) Samba2/3 merge the smbd and nmbd binaries. The binary generated is called "smbd", while "nmbd" becomes a symlink(decrease duplicate code).<br>
 86) Fix auth type select in VPN.<br>
-87) Update busybox to 1.19.2.<br>
-88) Update libevent to 2.0.13 version.<br>
+
+<br>
+<b>1.10.x</b><br>
+1) Update busybox to 1.19.2.<br>
+2) Update libevent to 2.0.13 version.<br>
+3) Add support exec external scripts on wpn button pressed or hold (/etc/scripts/OnPressWPS.button and OnHoldWPS.button scripts. And WPSHlprmode variable).<br>
+
 
 <br><br>
 <b>For support see:</b><br>
